--- a/arch/arm64/configs/RMX1901_defconfig
+++ b/arch/arm64/configs/RMX1901_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-Ouroboros"
+CONFIG_LOCALVERSION="-FUCKING"
 CONFIG_PRODUCT_REALME=y
 CONFIG_PRODUCT_REALME_RMX1901=y
 # CONFIG_LOCALVERSION_AUTO is not set
