--- a/.github/workflows/update_repo.yml
+++ b/.github/workflows/update_repo.yml
@@ -8,6 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
+      branch: "ksu_dev"
       ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       CCACHE_COMPILERCHECK: "%compiler% -dumpmachine; %compiler% -dumpversion"
       CCACHE_NOHASHDIR: "true"
